Migrate from SQLDelight to Firestore